SPX-494: GC related properties added to setenv.sh
Former-commit-id: 73a961f7a71057208658638b259ccbce0009dd52